[package]
name = "bupaku"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "bupaku"
edition = "2021"
rust-version = "1.56"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.1.1" }

[dependencies]
fs2 = "0.4.3"
serde_json = "1.0"
git2 = "0.15.0"
semver = "1.0.14"
iota-crypto = { version = "0.14.2", features = [ "pbkdf" ] }
iota_stronghold = "0.8.1"
octocrab = "0.17.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.1.1", features = ["dialog-open", "fs-read-dir", "updater"] }

  [dependencies.tauri-plugin-stronghold]
  git = "https://github.com/tauri-apps/tauri-plugin-stronghold"
  branch = "main"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
