[package]
name = "bupaku"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "bupaku"
edition = "2021"
rust-version = "1.56"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
fs2 = "0.4.3"
serde_json = "1.0"
git2 = "0.15.0"
semver = "1.0.16"
iota-crypto = { version = "0.15.3", features = [ "pbkdf" ] }
iota_stronghold = "1.0.5"
octocrab = "0.18.1"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.4", features = ["dialog-open", "fs-read-dir", "updater"] }
tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
